# syngps

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: DISCLAIMER  MANIFEST  NOTES  SynGPS_BOYA_graphs.cys  case_study_1.cys  case_study_3.cys  case_study_3.json  cs1.cyjs
revision/: .gitignore  README.md  download_inventory_data.sh
revision/data/: retrostar_subset_tms.tsv  simpretro_smiles.txt
revision/workflows/: environment.yml  process_graphs_with_inv.ipynb  process_graphs_with_leaves_as_sm.ipynb
src/: DISCLAIMER  DISCLAIMER.md  __init__.py  aicp.py  aicp2cytoscape.py  case_study2.ipynb  cy_graph_parser.py  environment.yml  graph_parser.py  syngps_cs1.ipynb  use_case_3_syngps_from_file.ipynb  yields.py
src/adapters/: __init__.py  abstract_data_adapter.py  default_data_adapter.py
src/errors/: __init__.py  errors.py
src/models/: __init__.py  models.py
src/syngps/: __init__.py  aicp.py  yields.py
src/syngps/adapters/: __init__.py  abstract_data_adapter.py  abstract_inventory_adapter.py  networkx_data_adapter.py
src/syngps/errors/: __init__.py  errors.py
src/syngps/models/: __init__.py  json_models.py  models.py
src/syngps/utils/: __init__.py  aicp2cytoscape.py  cy_graph_parser.py  decomposition_utils.py  draw_utils.py  graph_hash_utils.py  graph_json_utils.py  graph_utils.py  model_conversion_utils.py  (+3 more)
src/utils/: __init__.py  graph_hash_utils.py  graph_json_utils.py  graph_utils.py  rdkit_utils.py
workflows/: LICENSE  case_study2.ipynb  environment.yml  syngps_cs1.ipynb  syngps_fetch_graph_example.ipynb  use_case_3_syngps_from_file.ipynb
(+323 files in other folders)
